move config kepler map files to config folder. change config path in eda

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -30,24 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/galissa/miniconda3/envs/gis/lib/python3.8/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.cm as cm\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import seaborn as sns\n",
-    "#import plotly.graph_objects as go"
+    "import seaborn as sns"
    ]
   },
   {
@@ -63,26 +52,6 @@
     "COLOR_PALETTE = sns.color_palette(\"Set2\")\n",
     "\n",
     "WEEKDAYS = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.5529411764705883, 0.6274509803921569, 0.796078431372549)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "COLOR_PALETTE[2]"
    ]
   },
   {
@@ -1229,15 +1198,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_bike_trip[\"date\"] = pd.to_datetime(df_bike_trip[\"departure\"]).dt.strftime(\"%Y-%m-%d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -1260,12 +1220,14 @@
     "df_bike_station = df_bike_trip[[\"year\", \"departure_station_id\", \"departure_station_name\",\"departure_long\", \"departure_lat\"]].drop_duplicates()\n",
     "df_bike_station[\"period\"] = df_bike_station[\"year\"].apply(lambda x : pd.to_datetime(f\"{x}-12-01\"))\n",
     "\n",
-    "with open( \"bike_station_confmap.json\")as f:\n",
+    "with open( \"config/bike_station_confmap.json\")as f:\n",
     "    mapconfig = json.load(f)\n",
     "\n",
-    "map_bike_station = KeplerGl(height=700,  data={\"Bike shareing BA\": df_bike_station, \"neighborhoods\": neighborhoods})\n",
+    "map_bike_station = KeplerGl(height=600,  data={\"Bike shareing BA\": df_bike_station, \"neighborhoods\": neighborhoods})\n",
     "map_bike_station.config = mapconfig\n",
-    "map_bike_station"
+    "map_bike_station.save_to_html()\n",
+    "\n",
+    "plotKeplerMap(map_bike_station, height=600)"
    ]
   },
   {
@@ -1639,7 +1601,7 @@
     }
    ],
    "source": [
-    "with open( \"ride_confmap.json\") as f:\n",
+    "with open( \"config/ride_confmap.json\") as f:\n",
     "    config_map = json.load(f)\n",
     "\n",
     "map_bike_trips = KeplerGl(height=600,  data={\"Bike trips\": df_bike_trips_agg}, config=config_map)\n",
